# codex-claude-init

./: .gitignore  .mcp-mini.json  .mcp.json  AGENTS.md  CLAUDE.md  codex-claude-init-manual.md  migration_plan.md  parallel-coding-guide.md  vmark-usage-integration.md  xiaolai-claude-plugins-and-skills-tutorial.md
.claude/: README.md
.claude/agents/: auditor.md  impact-analyst.md  implementer.md  manual-test-author.md  planner.md  release-steward.md  spec-guardian.md  test-runner.md  verifier.md
.claude/commands/: _model-selection.md  audit-fix.md  codex-audit-fix.md  codex-audit-mini.md  codex-audit.md  codex-bug-analyze.md  codex-continue.md  codex-implement.md  codex-init.md  codex-review-plan.md  codex-verify.md  feature-workflow.md  fix-issue.md  fix.md  merge-prs.md  speckit.specify.md
.claude/rules/: 00-engineering-principles.md  10-tdd.md
.claude/scripts/: codex-preflight.sh
.claude/skills/: load-context.md  save-context.md
.codex/: config.toml
.codex/prompts/: speckit.specify.md
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
examples/: How to Use Speckit and Feature Workflow for MiniClaw.md  mdpro-development-workflow-guide.md  miniclaw-dev-workflow.md  miniclaw-integration-example.md
examples/analyst-pro-examples/: analyst-pro-prd.md  analystpro-feature-workflow-dev-guide.md  parallel-coding-guide-结合feature-workflow.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  health.rs  lib.rs  logging.rs  main.rs  sidecar.rs  state.rs
(+21 files in other folders)
