[package]
name = "reader3"
version = "0.1.0"
description = "Reader3 - EPUB Reader for reading with LLMs"
authors = ["Reader3 Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "reader3_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Process management (signals)
nix = { version = "0.29", features = ["signal"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-oslog = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
